@@ -1,6 +1,6 @@
 gtk-feed README
 
-Copyright (C) Henri Häkkinen
+Copyright (C) 2008 Henri Häkkinen
 
 gtk-feed is intended to become a lightweight GTK+ 2.0 RSS/Atom feed reader.
 It works only as a icon on the window manager's system tray and provides
