@@ -18,22 +18,23 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #ifndef RSSFEED_H
 #define RSSFEED_H
 
+#include <glib.h>
+
 typedef struct {
-  GString  *title;
-  GString  *link;
-  GString  *desc;
+  gchar *title;
+  gchar *link;
+  gchar *desc;
 } RSSFeedItem;
 
 typedef struct {
-  GString  *title;
-  GString  *link;
-  GString  *desc;
-  GList    *items;
+  gchar *title;
+  gchar *link;
+  gchar *desc;
+  GList *items;
 } RSSFeed;
 
 RSSFeed * rss_feed_new   ();
-void      rss_feed_free  (RSSFeed *rss);
-void      rss_feed_clear (RSSFeed *rss);
-gboolean  rss_feed_parse (RSSFeed *rss, const gchar *text, gsize tex_len);
+void      rss_feed_free  (RSSFeed *feed);
+gboolean  rss_feed_parse (RSSFeed *feed, const gchar *uri);
 
 #endif
